# quicktype-rust-poc

./: .gitignore  Cargo.toml  README.md  index.ts  package.json  schema.json
src/: main.rs
