[package]
name = "quicktype-rust-example"
version = "0.1.0"
authors = ["tkat0 <tkato.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8.3"